# bunge-bits

./: .gitignore  README.md
crates/stream_datastore/: Cargo.toml
crates/stream_datastore/src/: lib.rs
crates/stream_datastore/src/datastore/: mod.rs  postgres.rs
crates/stream_pulse/: Cargo.toml  Dockerfile  README.md
crates/stream_pulse/src/lib/: error.rs  lib.rs  parser.rs  process_stream.rs  processor.rs
crates/stream_pulse/src/lib/llm/: mod.rs  openai.rs  summarizer.rs  transcriber.rs
crates/stream_pulse/src/lib/llm/prompts/: system_0.txt
crates/stream_pulse/src/lib/llm/providers/: mod.rs  openai.rs
crates/stream_pulse/src/lib/processor/: builder.rs  mod.rs
crates/stream_pulse/src/lib/yt/: audio_handler.rs  mod.rs  scraper.rs
crates/stream_pulse/tests/: integration_tests.rs
crates/stream_pulse/tests/fixtures/: yt.html
crates/stream_pulse/tests/mocks/: audio_handler.rs  channel_scraper.rs  datastore.rs  mod.rs  summarizer.rs  transcriber.rs
ui/: vercel.json
ui/app/components/: footer.tsx  header.tsx
ui/app/routes/: about.tsx
