[package]
name = "stream_pulse"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
categories.workspace = true

[[bin]]
name = "stream-pulse-cron"
path = "./src/bin/stream-pulse-cron.rs"

[lib]
name = "stream_pulse"
path = "./src/lib/lib.rs"

[dependencies]
another-tiktoken-rs = { version = "0.1.2", features = ["async-openai"] }
anyhow = "1.0"
apalis = { version = "1.0.0-rc.3", features = [
  "catch-panic",
  "retry",
  "sentry",
] }
apalis-cron = "1.0.0-rc.3"
chrono = { workspace = true }
chrono-tz = "0.10.0"
cron = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.30"
itertools = { workspace = true }
rayon = "1.5"
regex = "1.10.6"
reqwest = { version = "0.13", features = ["json", "multipart"] }
sentry = "0.46"
sentry-tracing = "0.46"
serde = { workspace = true }
serde_json = { workspace = true }
stream_datastore = { version = "0.1.0", path = "../stream_datastore" }
thiserror = { workspace = true }
# TODO: limit tokio features
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.18"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "registry",
] }
ytdlp_bindings = { version = "0.1.0", path = "../ytdlp_bindings" }

[dev-dependencies]
# TODO: Move to prod dependency - expose a cli
clap = { version = "4.5.40", features = ["derive"] }
